@@ -1,3 +1,10 @@
+2009-04-18  Vincent Torri  <doursse at users dot sf dot net>
+
+	* configure.ac:
+	* src/lib/Makefile.am:
+	put c++ flags in a variable and use gcc when
+	linking the Windows CE code.
+
 2009-04-11  Vincent Torri  <doursse at users dot sf dot net>
 
 	* src/lib/evil_fcntl.c:
